# log4cpp-encapsulation

./: CMakeLists.txt  Mylog.cpp  Mylog.h  README.md  func.cpp
